# pantoken

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  README.md  bunfig.toml  headless-deployment-handoff.md  initial-handoff.md  install.sh  justfile  package.json  parity-ready  pilot-feature-state.md  playwright.config.ts  playwright.live.config.ts  polytoken-features.md  test-setup.ts  tsconfig.parity.json
.cargo/: config.toml
.claude/: launch.json  settings.json
.polytoken/: README.md  config.yaml  hooks.json
04xbs5-east/: plan.md
client/: index.html  package.json  tsconfig.json  vite.config.ts
deploy/: DEPLOY.md  bootstrap-headless.sh  com.pantoken.server.plist  com.pilot.server.plist  launchd-platform-gate.sh  mac-mini-preflight.sh  run.sh  update-headless.sh
desktop/: .gitignore  Cargo.toml  Info.plist  README.md  build-app.sh  tauri.conf.json
desktop-tauri/: Cargo.toml  README.md  tauri.conf.json
docs/: ADR-desktop-shell.md  DECISIONS.md  DESIGN.md  DONE.md  OPEN-QUESTIONS.md  PLAN-driver-robustness.md  PLAN-mobile.md  PLAN-parity-testing.md  PLAN-polytoken-driver.md  PLAN-protocol-v2.md  PLAN-self-contained-extensions.md  STATUS.md  TODO.md  blind-rust-server-architecture-draft.md  design-system-pass.md  polytoken-spike.md  polytoken-upstream-feature-asks.md  remote-deployment-phase1.md  ui-conventions.md
e2e/: abort-restore.e2e.ts  accent-roles.e2e.ts  adventurous-handoff.e2e.ts  answer-card.e2e.ts  approvals.e2e.ts  approvals.spec.ts  branch.e2e.ts  (+102 more)
server-rs/pantoken-tar-validate/: Cargo.toml
server-rs/pantoken-tar-validate/src/: lib.rs  main.rs
(+428 files in other folders)
